# VIdeoControlPanel

./: CMakeLists.txt  LICENSE  README.md  configuration.ini
include/: cpanelmainwindow.h  vlcmediaplayer.h
res/: resources.qrc
src/: cpanelmainwindow.cpp  cpanelmainwindow.ui  main.cpp  vlcmediaplayer.cpp
